comments and gitignore